--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>org.exemple.demo</groupId>
   <artifactId>ticket</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
   <name>ticket</name>
   <url>http://maven.apache.org</url>
