--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,80 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+          
+  
+  
+  
   <modelVersion>4.0.0</modelVersion>
-
+          
+  
+  
+  
   <groupId>org.exemple.demo</groupId>
+          
+  
+  
+  
   <artifactId>ticket</artifactId>
+          
+  
+  
+  
   <version>1.0-SNAPSHOT</version>
+          
+  
+  
+  
   <packaging>pom</packaging>
-
+          
+  
+  
+  
   <name>ticket</name>
+          
+  
+  
+  
   <url>http://maven.apache.org</url>
-
+          
+  
+  
+  
   <properties>
+                    
+    
+    
+    
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+                  
+  
+  
+  
   </properties>
+        
+  
+  
+  
+  <modules>
+                  
+    
+    
+    
+    <module>ticket-batch</module>
+                  
+    
+    
+    
+    <module>ticket-webapp</module>
+              
+    
+    
+    <module>ticket-business</module>
+          
+    
+    <module>ticket-consumer</module>
+      
+  </modules>
+      
+
 
 </project>
