--- a/ticket-business/pom.xml
+++ b/ticket-business/pom.xml
@@ -12,10 +12,21 @@
   <version>1.0-SNAPSHOT</version>
   <name>ticket-business</name>
   <url>http://maven.apache.org</url>
+  
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  
   <dependencies>
+	   <!-- ===== Modules ===== -->
+        <dependency>
+            <groupId>org.exemple.demo</groupId>
+            <artifactId>ticket-consumer</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.exemple.demo</groupId>
+            <artifactId>ticket-model</artifactId>
+        </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
