--- a/ticket-model/pom.xml
+++ b/ticket-model/pom.xml
@@ -8,19 +8,14 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <groupId>org.exemple.demo</groupId>
-  <artifactId>ticket-consumer</artifactId>
+  <artifactId>ticket-model</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>ticket-consumer</name>
+  <name>ticket-model</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
-	  <!-- ===== Modules ===== -->
-	   <dependency>
-            <groupId>org.exemple.demo</groupId>
-            <artifactId>ticket-model</artifactId>
-        </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
