pom.xml-module-ticket-webapp: add dependency module ticket-model and ticket-business in pom.xml

--- a/ticket-webapp/pom.xml
+++ b/ticket-webapp/pom.xml
@@ -23,6 +23,16 @@
   </properties>
 
   <dependencies>
+	  <!-- ===== Modules ===== -->
+        <dependency>
+            <groupId>org.exemple.demo</groupId>
+            <artifactId>ticket-business</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.exemple.demo</groupId>
+            <artifactId>ticket-model</artifactId>
+        </dependency>
+    
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
