--- a/ticket-webapp/pom.xml
+++ b/ticket-webapp/pom.xml
@@ -53,30 +53,24 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-			<!-- =====Bibliothèques tierces avec scope, sans preciser le scope, le scope est sur compilation
+		<!-- =====Bibliothèques tierces avec scope, sans preciser le scope, le
+		scope est sur compilation
 			comme pour la dependance ci desous validation-api ===== -->
-		   <dependency>
-                <groupId>javax.validation</groupId>
-                <artifactId>validation-api</artifactId>
-                <version>1.1.0.Final</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.bval</groupId>
-                <artifactId>bval-jsr</artifactId>
-                <version>1.1.2</version>
-                <scope>runtime</scope>
-            </dependency>
-            <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>servlet-api</artifactId>
-                <version>2.5</version>
-                <scope>provided</scope>
-            </dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.bval</groupId>
+			<artifactId>bval-jsr</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
