add springframework to pom.xml parent with import BOM with type pom

--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,15 @@
 				<scope>test</scope>
 			</dependency>
 
+			<!-- ===== Bibliothèques tierces importés dans le BOM  du framework
+			SPRING ===== -->
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-framework-bom</artifactId>
+				<version>4.3.11.RELEASE</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 		</dependencies>
 
 	</dependencyManagement>
